# video_recap_feature

./: .env  .gitignore  README.md  app.py  karaoke.ass  main.py  models.py  pyproject.toml  requirements.txt  subtitles.py  test_cut_video.py  test_llm.py  test_merge_segments.py  yt_streamlit.py
uploads/: 497c8118-2bb9-4e34-9b18-892de76f43b2.txt  b081910a-d7a4-40ed-90e4-b2d1a67ac0e9.txt  b857c5ba-dcc2-4527-bd29-077fe7088271.txt  subtitles.srt
